# districting

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGUROBI.cmake
include/districting/: io.hpp  models.hpp
src/: cut.cpp  flow.cpp  graph.cpp  gridgen.cpp  hess.cpp  io.cpp  lagrange.cpp  main.cpp  main_hot_start.cpp  ralg.cpp  translate.cpp
src/test/: CMakeLists.txt  basic_gtest.cpp
